syntax = "proto3";
package api.v1.users;

//import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
//import "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options/annotations.proto";
import "github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis/google/api/annotations.proto";
//import "github.com/mwitkow/go-proto-validators/validator.proto";

service UsersAPIService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users/user"
            body: "*"
        };
    }

    rpc Auth (AuthRequest) returns (AuthResponse) {
        option (google.api.http) = {
            post: "/v1/users/auth"
            body: "*"
        };
    }

    rpc AddRole (AddRoleRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/users/user/{uuid}/role"
            body: "*"
        };
    }
}

message AddRoleRequest {
    string uuid = 1;
    Role role = 2;
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    USER_ADMIN = 2;
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}

message Error {
    int32 code = 1;
    string description = 2;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string company = 3;
}

message CreateUserResponse {
    ResponseStateCode stateCode = 1;
}

enum ResponseStateCode {
    CREATED = 0;
}